[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/arial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/gameoverScript.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 91
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 58
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color( 0.133333, 0.0470588, 0.415686, 1 )
margin_left = 272.0
margin_top = 59.0
margin_right = 780.0
margin_bottom = 231.0
custom_fonts/normal_font = SubResource( 1 )
text = "Game Over"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
modulate = Color( 0.45098, 0.247059, 0.443137, 1 )
margin_left = 228.0
margin_top = 194.0
margin_right = 944.0
margin_bottom = 328.0
custom_fonts/normal_font = SubResource( 2 )
text = "You Have Survived 5 Seconds"

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 336.0
margin_top = 255.0
margin_right = 677.0
margin_bottom = 406.0
custom_fonts/font = SubResource( 3 )
action_mode = 0
text = "Restart"
flat = true

[node name="Button2" type="Button" parent="."]
modulate = Color( 1, 0.984314, 0, 1 )
margin_left = 338.0
margin_top = 364.0
margin_right = 679.0
margin_bottom = 515.0
custom_fonts/font = SubResource( 3 )
action_mode = 0
text = "Menu"
flat = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
